--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div ng-view="true"></div>
+    <div ng-view="true" style="margin-top: 80px;"></div>
 
     <script th:src="@{/js/jquery-3.1.0.min.js}" type="text/javascript"></script>
     <script th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}" type="text/javascript"></script>
@@ -33,6 +33,10 @@
     <script th:src="@{http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
 
     <script th:src="@{/js/app.js}" type="text/javascript"></script>
+    <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
+
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js}" type="text/javascript"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}" type="text/javascript"></script>
 </body>
 </html>
