--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <link th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" type="text/css" rel="stylesheet"/>
     <link th:href="@{/css/page-style.css}" type="text/css" rel="stylesheet"/>
-    <link th:href="@{http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css}" rel="stylesheet"/>
+    <link th:href="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css}" rel="stylesheet"/>
     <link th:href="@{https://fonts.googleapis.com/css?family=Lato}" rel="stylesheet"/>
     <meta charset="UTF-8"/>
 </head>
@@ -30,7 +30,7 @@
     <script th:src="@{/angular-1.5.8/angular-route.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-aria.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-animate.js}" type="text/javascript"></script>
-    <script th:src="@{http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
+    <script th:src="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
 
     <script th:src="@{/js/app.js}" type="text/javascript"></script>
     <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
