--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,21 +6,24 @@
     <link th:href="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css}" rel="stylesheet"/>
     <link th:href="@{https://fonts.googleapis.com/css?family=Lato}" rel="stylesheet"/>
     <meta charset="UTF-8"/>
+    <title>Valverde Admin</title>
 </head>
-<body ng-app="App" ng-cloak="true">
+<body ng-app="App" ng-controller="AppController" ng-cloak="true">
     <div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header"><a class="navbar-brand">Admin</a>
             </div>
             <div class="collapse navbar-collapse navbar-menubuilder">
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a>HealthChecker</a></li>
+                    <li ng-click="goToLocation(item)" ng-repeat="item in menu.items" ng-class="{'active-menu-item' : isActiveItem(item)}">
+                        <a>{{item}}</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <div ng-view="true" style="margin-top: 80px;"></div>
+    <div id="content" ng-view="true"></div>
 
     <script th:src="@{/js/jquery-3.1.0.min.js}" type="text/javascript"></script>
     <script th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}" type="text/javascript"></script>
@@ -33,6 +36,7 @@
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
 
     <script th:src="@{/js/app.js}" type="text/javascript"></script>
+    <script th:src="@{/js/controller/app-controller.js}" type="text/javascript"></script>
     <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
 
