--- a/src/main/resources/templates/healthchecker.html
+++ b/src/main/resources/templates/healthchecker.html
@@ -1,18 +1,20 @@
-
-<div ng-controller="HealthCheckerController" ng-init="init()">
-    <div class="row col-md-4 col-md-offset-2">
-
-        <div class="last-update">Last update: {{wasLastUpdateAgo}} seconds ago</div>
+<div class="container" ng-controller="HealthCheckerController" ng-init="init()">
+    <div class="healthchecker row col-md-5 col-md-offset-2 col-sm-7 col-sm-offset-3">
+        <div class="last-update">
+            <span>Last update: {{wasLastUpdateAgo}} seconds ago</span>
+            <span ng-click="refreshStatuses()" class="refresh-span glyphicon glyphicon-refresh pull-right"></span>
+        </div>
 
         <div class="panel panel-primary healthchecker-panel">
             <div class="panel-heading header">Applications</div>
-            <table class="table">
+            <table class="table table-striped">
                 <tr ng-repeat="appReport in apps">
-                    <td class="col-md-1">
-                        <a href="{{appReport.appHost}}" target="_blank" class="glyphicon glyphicon-eye-open view-page"></a>
+                    <td class="col-sm-1">
+                        <a href="{{appReport.appHost}}" target="_blank"
+                           class="glyphicon glyphicon-eye-open view-page"></a>
                     </td>
-                    <td class="col-md-7 app-name">{{appReport.appName}}</td>
-                    <td class="col-md-4" ng-class="{healthy : appReport.state === 'HEALTHY',
+                    <td class="col-sm-7 app-name">{{appReport.appName}}</td>
+                    <td class="col-sm-4" ng-class="{healthy : appReport.state === 'HEALTHY',
                             error : appReport.state === 'ERROR'}"></td>
                 </tr>
             </table>
