--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,6 +39,7 @@
     <script th:src="@{/js/controller/app-controller.js}" type="text/javascript"></script>
     <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
+    <script th:src="@{/js/controller/health-history-controller.js}" type="text/javascript"></script>
 
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js}" type="text/javascript"></script>
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}" type="text/javascript"></script>
