--- a/src/main/resources/static/css/page-style.css
+++ b/src/main/resources/static/css/page-style.css
@@ -60,6 +60,61 @@ html {
     margin: 0;
 }
 
+.page-size-btn {
+    background-color: #5bc0de;
+    border:none;
+}
+
+.page-size-dropdown {
+    color: white;
+}
+
+.page-size-dropdown:hover {
+    color: white;
+}
+
+.pagination {
+    margin: 0;
+    text-align: center;
+    vertical-align: middle;
+    background: #f2f2f2;
+    width: 100%;
+    display: table;
+}
+
+.page {
+    display: table-cell;
+    border: solid 1px #428bca;
+    background: white;
+    font-size: .95em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #428bca;
+    height: 30px;
+    line-height: 30px;
+}
+
+.page:not(.activePage):hover {
+    background: ghostwhite;
+    cursor: pointer;
+}
+
+.activePage {
+    background-color: #428bca;
+    color: white;
+}
+
+.activePage:hover {
+    background-color: #428bca;
+    color: white;
+    cursor: pointer;
+}
+
+.selected {
+    background-color: #E3F2FD;
+    color: #0D47A1;
+}
+
 .active-menu-item {
     background-color: #01579B;
 }
@@ -68,17 +123,17 @@ html {
     margin-top: 30px;
 }
 
-.table {
+.custom-table {
     border: 2px solid #2980B9;
 }
 
-.table tr td {
+.custom-table tr td {
     border-bottom: 2px solid #2980B9;
 }
 
 .healthchecker {
-    min-width: 400px;
-    max-width: 500px;
+    min-width: 550px;
+    max-width: 600px;
 }
 
 .header {
@@ -89,11 +144,6 @@ html {
 .date-history {
     font-size: 16px;
     font-weight: bold;
-}
-
-.history-table {
-    height: 700px;
-    overflow-y: auto;
 }
 
 .last-update {
@@ -148,6 +198,14 @@ span:focus {
 
 .warning {
     background-color: #FFB300;
+}
+
+.nodata {
+    background-color: #0f0f0f;
+}
+
+.inactive {
+    background-color: #9d9d9d;
 }
 
 a:hover, a:active, a.active  {
