--- a/src/main/resources/templates/healthchecker.html
+++ b/src/main/resources/templates/healthchecker.html
@@ -4,6 +4,7 @@
             <span>Last update: {{wasLastUpdateAgo}} seconds ago</span>
 
             <div class="pull-right">
+                <span class="margin-right glyphicon-span glyphicon glyphicon-plus" data-toggle="modal" data-target="#add-app-modal"></span>
                 <span ng-click="goToLocation('healthchecker/history')" class="margin-right glyphicon-span glyphicon glyphicon-th-list"></span>
                 <span ng-click="refreshStatuses()" class="glyphicon-span glyphicon glyphicon-refresh"></span>
             </div>
@@ -11,17 +12,69 @@
 
         <div class="panel panel-primary healthchecker-panel">
             <div class="panel-heading header">Applications</div>
-            <table class="table table-striped">
-                <tr ng-repeat="appReport in apps">
-                    <td class="col-sm-1">
-                        <a href="{{appReport.appHost}}" target="_blank"
-                           class="glyphicon glyphicon-eye-open view-page"></a>
+            <table class="table table-striped custom-table">
+                <tr ng-repeat="detail in details">
+                    <td class="col-sm-2">
+                        <div style="float: left">
+                            <a ng-click="setDeletingApp(detail.application)" class="glyphicon glyphicon-remove view-page"
+                               data-toggle="modal" data-target="#delete-confirm-modal"></a>
+                            <a ng-click="setEditedApp(detail.application)" class="glyphicon glyphicon-edit view-page"
+                               data-toggle="modal" data-target="#add-app-modal"></a>
+                            <a href="{{detail.application.host}}" target="_blank"
+                               class="glyphicon glyphicon-eye-open view-page"></a>
+                        </div>
                     </td>
-                    <td class="col-sm-7 app-name">{{appReport.appName}}</td>
-                    <td class="col-sm-4" ng-class="{healthy : appReport.state === 'HEALTHY',
-                            error : appReport.state === 'ERROR'}"></td>
+                    <td class="col-sm-7 app-name">{{detail.application.name}}</td>
+                    <td class="col-sm-3" ng-class="{healthy : detail.state === 'HEALTHY',
+                            error : detail.state === 'ERROR',
+                            inactive : detail.state === 'INACTIVE',
+                            nodata : detail.state === 'NO_DATA'}"></td>
                 </tr>
             </table>
+        </div>
+
+        <div id="delete-confirm-modal" class="modal fade modal-top-margin" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content sitter-modal">
+                    <div class="modal-header bg-primary">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Are you sure want to remove {{appToRemove.name}}</h4>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" ng-click="reset()" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" ng-click="deleteApp()" data-dismiss="modal">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="add-app-modal" class="modal fade modal-top-margin" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content sitter-modal">
+                    <div class="modal-header bg-primary">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Adding new application</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <div>App name</div>
+                            <input type="text" class="form-control" ng-model="editedApp.name"/>
+                        </div>
+                        <div class="form-group">
+                            <div>Host</div>
+                            <input type="text" class="form-control" ng-model="editedApp.host"/>
+                        </div>
+                        <div class="form-group">
+                            <div>Activity</div>
+                            <input ng-model="editedApp.active" ng-checked="editedApp.active == 1" type="checkbox"/>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" ng-click="saveApp()" data-dismiss="modal">Save</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
