--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,23 +24,27 @@
     </div>
 
     <div id="content" ng-view="true"></div>
-
+    <!-- Base libraries -->
     <script th:src="@{/js/jquery-3.1.0.min.js}" type="text/javascript"></script>
     <script th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}" type="text/javascript"></script>
-
     <script th:src="@{/angular-1.5.8/angular.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-resource.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-route.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-aria.js}" type="text/javascript"></script>
     <script th:src="@{/angular-1.5.8/angular-animate.js}" type="text/javascript"></script>
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
+    <script th:src="@{/js/ui-bootstrap-tpls-2.5.0.min.js}" type="text/javascript"></script>
 
+    <!-- Controllers -->
     <script th:src="@{/js/app.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/app-controller.js}" type="text/javascript"></script>
-    <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
     <script th:src="@{/js/controller/health-history-controller.js}" type="text/javascript"></script>
 
+    <!-- Services -->
+    <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
+
+    <!-- WebSockets -->
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js}" type="text/javascript"></script>
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}" type="text/javascript"></script>
 </body>
