--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,49 +3,63 @@
 <head>
     <link th:href="@{/bootstrap-3.3.7-dist/css/bootstrap.css}" type="text/css" rel="stylesheet"/>
     <link th:href="@{/css/page-style.css}" type="text/css" rel="stylesheet"/>
-    <link th:href="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css}" rel="stylesheet"/>
+    <link th:href="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css}"
+          rel="stylesheet"/>
     <link th:href="@{https://fonts.googleapis.com/css?family=Lato}" rel="stylesheet"/>
     <meta charset="UTF-8"/>
     <title>Valverde Admin</title>
 </head>
 <body ng-app="App" ng-controller="AppController" ng-cloak="true">
-    <div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header"><a class="navbar-brand">Admin</a>
-            </div>
-            <div class="collapse navbar-collapse navbar-menubuilder">
-                <ul class="nav navbar-nav navbar-left">
-                    <li ng-click="goToLocation(item)" ng-repeat="item in menu.items" ng-class="{'active-menu-item' : isActiveItem(item)}">
-                        <a>{{item}}</a>
-                    </li>
-                </ul>
-            </div>
+<div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header"><a class="navbar-brand">Admin</a>
+        </div>
+        <div class="collapse navbar-collapse navbar-menubuilder">
+            <ul class="nav navbar-nav navbar-left">
+                <li ng-repeat="item in menu.items"
+                    ng-class="{'active-menu-item' : isActiveItem(item)}">
+                    <a ng-click="goToLocation(item.path)">{{item.label}}</a>
+                </li>
+            </ul>
+            <ul ng-if="isAuthenticated" class="nav navbar-nav navbar-right">
+                <span style="color: white" class="navbar-text">Logged as: {{loggedUser}}</span>
+                <li><a ng-click="logout()">Logout</a></li>
+            </ul>
+            <ul ng-if="!isAuthenticated" class="nav navbar-nav navbar-right">
+                <li><a ng-click="logout()">Login</a></li>
+            </ul>
         </div>
     </div>
+</div>
 
-    <div id="content" ng-view="true"></div>
-    <!-- Base libraries -->
-    <script th:src="@{/js/jquery-3.1.0.min.js}" type="text/javascript"></script>
-    <script th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}" type="text/javascript"></script>
-    <script th:src="@{/angular-1.5.8/angular.js}" type="text/javascript"></script>
-    <script th:src="@{/angular-1.5.8/angular-resource.js}" type="text/javascript"></script>
-    <script th:src="@{/angular-1.5.8/angular-route.js}" type="text/javascript"></script>
-    <script th:src="@{/angular-1.5.8/angular-aria.js}" type="text/javascript"></script>
-    <script th:src="@{/angular-1.5.8/angular-animate.js}" type="text/javascript"></script>
-    <script th:src="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
-    <script th:src="@{/js/ui-bootstrap-tpls-2.5.0.min.js}" type="text/javascript"></script>
+<div id="content" ng-view="true"></div>
+<!-- Base libraries -->
+<script th:src="@{/js/jquery-3.1.0.min.js}" type="text/javascript"></script>
+<script th:src="@{/bootstrap-3.3.7-dist/js/bootstrap.js}" type="text/javascript"></script>
+<script th:src="@{/angular-1.5.8/angular.js}" type="text/javascript"></script>
+<script th:src="@{/angular-1.5.8/angular-resource.js}" type="text/javascript"></script>
+<script th:src="@{/angular-1.5.8/angular-route.js}" type="text/javascript"></script>
+<script th:src="@{/angular-1.5.8/angular-aria.js}" type="text/javascript"></script>
+<script th:src="@{/angular-1.5.8/angular-animate.js}" type="text/javascript"></script>
+<script th:src="@{https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js}"></script>
+<script th:src="@{/js/ui-bootstrap-tpls-2.5.0.min.js}" type="text/javascript"></script>
 
-    <!-- Controllers -->
-    <script th:src="@{/js/app.js}" type="text/javascript"></script>
-    <script th:src="@{/js/controller/app-controller.js}" type="text/javascript"></script>
-    <script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
-    <script th:src="@{/js/controller/health-history-controller.js}" type="text/javascript"></script>
+<!-- Controllers -->
+<script th:src="@{/js/app.js}" type="text/javascript"></script>
+<script th:src="@{/js/controller/app-controller.js}" type="text/javascript"></script>
+<script th:src="@{/js/controller/login-controller.js}" type="text/javascript"></script>
+<script th:src="@{/js/controller/healthchecker-controller.js}" type="text/javascript"></script>
+<script th:src="@{/js/controller/health-history-controller.js}" type="text/javascript"></script>
+<script th:src="@{/js/controller/sms-controller.js}" type="text/javascript"></script>
 
-    <!-- Services -->
-    <script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
+<!-- Services -->
+<script th:src="@{/js/service/login-service.js}" type="text/javascript"></script>
+<script th:src="@{/js/service/healthchecker-service.js}" type="text/javascript"></script>
+<script th:src="@{/js/service/sms-service.js}" type="text/javascript"></script>
 
-    <!-- WebSockets -->
-    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js}" type="text/javascript"></script>
-    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}" type="text/javascript"></script>
+<!-- WebSockets -->
+<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js}"
+        type="text/javascript"></script>
+<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js}" type="text/javascript"></script>
 </body>
 </html>
