--- a/src/main/resources/templates/sms-sender.html
+++ b/src/main/resources/templates/sms-sender.html
@@ -1,7 +1,7 @@
 
-<div style="margin-left: 150px" class="col-md-5">
+<div style="margin-left: 160px" class="col-md-5">
     <div class="panel panel-primary">
-        <div class="panel-heading panel-header">Send sms</div>
+        <div class="panel-heading header">Send sms</div>
         <div class="panel-body">
             <div class="form-group">
                 <label>Phone number</label>
